// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KSelect matches snapshot 1`] = `
<div class="k-select" style="width: 200px;">
  <!---->
  <div id="test-select-id-1234" data-testid="k-select-selected-item">
    <!---->
    <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button">
      <div id="test-select-input-id-1234" data-testid="k-select-input" role="listbox" class="" style="position: relative;">
        <!---->
        <div class="k-input-wrapper k-select-input"><input id="test-select-text-id-1234" placeholder="Filter..." class="form-control k-input k-input-medium">
          <!---->
          <!---->
        </div>
      </div>
      <div id="test-popover-id-1234" role="region" class="k-popover k-select-popover mt-0  k-select-pop-dropdown hide-caret" style="width: 0px; max-width: 0px; display: none;" name="fade">
        <!---->
        <div class="k-popover-content">
          <ul class="k-select-list ma-0 pa-0">
            <li data-testid="k-select-item-label1" class="k-select-item">
              <div role="option" class="d-block"><button value="label1" class=""><span class="k-select-item-label mr-2">Label 1</span> <span class="k-select-selected-icon-container"><!----></span></button></div>
            </li>
            <!---->
          </ul>
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`KSelect renders props when passed 1`] = `
<div class="k-select" style="width: 200px;">
  <!---->
  <div id="test-select-id-1234" data-testid="k-select-selected-item">
    <!---->
    <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button">
      <div id="test-select-input-id-1234" data-testid="k-select-input" role="listbox" class="" style="position: relative;">
        <!---->
        <div class="k-input-wrapper k-select-input"><input id="test-select-text-id-1234" placeholder="Filter..." class="form-control k-input k-input-medium">
          <!---->
          <!---->
        </div>
      </div>
      <div id="test-popover-id-1234" role="region" class="k-popover k-select-popover mt-0  k-select-pop-dropdown hide-caret" style="width: 0px; max-width: 0px; display: none;" name="fade">
        <!---->
        <div class="k-popover-content">
          <ul class="k-select-list ma-0 pa-0">
            <li data-testid="k-select-item-label1" class="k-select-item">
              <div role="option" class="d-block"><button value="label1" class=""><span class="k-select-item-label mr-2">Label 1</span> <span class="k-select-selected-icon-container"><!----></span></button></div>
            </li>
            <li data-testid="k-select-item-label2" class="k-select-item">
              <div role="option" class="d-block"><button value="label2" class=""><span class="k-select-item-label mr-2">Label 2</span> <span class="k-select-selected-icon-container"><!----></span></button></div>
            </li>
            <li data-testid="k-select-item-label3" class="k-select-item">
              <div role="option" class="d-block"><button value="label3" class=""><span class="k-select-item-label mr-2">Label 3</span> <span class="k-select-selected-icon-container"><!----></span></button></div>
            </li>
            <!---->
          </ul>
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`KSelect renders with selected item 1`] = `
<div class="k-select" style="width: 200px;">
  <!---->
  <div id="test-select-id-1234" data-testid="k-select-selected-item">
    <div class="k-select-item-selection px-3 py-1">
      <div class="selected-item-label">Label 1</div> <button class="clear-selection-icon cursor-pointer non-visual-button"><span class="kong-icon kong-icon-clear"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <title>Clear</title>
  <circle cx="10" cy="10" r="6.25" fill="none" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round"></circle>
  <path d="M12 12 8 8M12 8l-4 4" stroke="#A3BBCC" stroke-width="2" stroke-linecap="round"></path>
</svg>
</span></button>
    </div>
    <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button">
      <div id="test-select-input-id-1234" data-testid="k-select-input" role="listbox" class="" style="position: relative;">
        <!---->
        <div class="k-input-wrapper k-select-input"><input id="test-select-text-id-1234" placeholder="Filter..." class="form-control k-input k-input-medium">
          <!---->
          <!---->
        </div>
      </div>
      <div id="test-popover-id-1234" role="region" class="k-popover k-select-popover mt-0  k-select-pop-dropdown hide-caret" style="width: 0px; max-width: 0px; display: none;" name="fade">
        <!---->
        <div class="k-popover-content">
          <ul class="k-select-list ma-0 pa-0">
            <li data-testid="k-select-item-label1" class="k-select-item">
              <div role="option" class="d-block"><button value="label1" class="selected"><span class="k-select-item-label mr-2">Label 1</span> <span class="k-select-selected-icon-container"><span class="kong-icon selected-item-icon kong-icon-check"><svg viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
  <path d="m14 7-6 6-3-3" fill="none" stroke="#A3BBCC" stroke-width="2.25" stroke-linecap="round" stroke-linejoin="round"></path>
</svg>
</span></span></button></div>
            </li>
            <!---->
          </ul>
        </div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;
